# short-crack-model

./: .gitignore  Autoconf.md  CMakeLists.txt  INSTALL.md  README.md  archmage.sh  short-crack-model.cc  sudo
examples/2d_elasticity/: CMakeLists.txt
examples/2d_elasticity/include/: right_hand_side.h
examples/2d_elasticity/src/: boundary_values.cc  main.cc  right_hand_side.cc
examples/elasticity/: CMakeLists.txt
examples/elasticity/include/: boundary_values.h  short_crack.h
examples/elasticity/src/: short_crack.cc
examples/laplace/: CMakeLists.txt
examples/laplace/include/: laplace.h
examples/laplace/src/: laplace.cc  main.cc  right_hand_side.cc
include/: BoundaryValues.h  RightHandSide.h  ShortCrack.h  boundary_values.h  right_hand_side.h  short-crack-model.h  short_crack.h
resources/input/: mesh-compare.msh  mesh.geo  mesh.msh
resources/output/: grid.eps  solution-2d.eps  solution-2d.vtk
scripts/: casting.sh  dindex.sh  display.sh
src/: BoundaryValues.cc  RightHandSide.cc  ShortCrack.cc  boundary_values.cc  main.cc  short-crack-model.cc  short_crack.cc
